--- a/huddyriv23/aboutUs.html
+++ b/huddyriv23/aboutUs.html
@@ -34,7 +34,7 @@
 
     <div>
         <div class="navbar">
-            <a href="/home.html">
+            <a href="/index.html">
                 <img src="/logo.svg" alt="Company logo" width="217.2px" height="122.4px">
                     
             </a>
